# py4pd-orchidea

./: .gitignore  README.deken.pd  README.md  orchidea.py  pyproject.toml
.github/workflows/: deken.yml
help/: orchidea.flute-help.pd
instruments/: Brass.py  Keyboards.py  PluckedStrings.py  Strings.py  Winds.py  Woodwinds.py
orchidea/: __init__.py
orchidea/help/: orchidea-help.pd
orchidea/instruments/: PluckedStrings.py  Strings.py
src/: Brass.py  Strings.py  Winds.py
