[project]
name = "py4pd-orchidea" 
version = "0.1.1" 
description = "py4pd-orchidea is a Pure Data (Pd) external object that allows to use the Orchidea SOL samples library." # Description

[project.urls]
"Source Code" = "https://github.com/charlesneimog/py4pd-orchidea" 

[tool.setuptools]
packages = ["orchidea"]  

[tool.setuptools.package-data]
"orchidea" = ["*", "instruments/*", "help/*"] 

[tool.black]
line-length = 180

